# planets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.cfg
data/models/: Barrel.mtl  cube.mtl  sponza_separated.mtl
data/shaders/: Standard_frag.glsl  Standard_vert.glsl  test_frag.glsl  test_vert.glsl
ext/: tinyobjloader_impl.cpp
include/: Application.hpp  Camera.hpp  DebugUtils.hpp  LightSource.hpp  Material.hpp  ResourceManager.hpp  Scene.hpp  ShaderProgram.hpp  SpatialObject.hpp  StaticMesh.hpp  StaticMeshInstance.hpp  Texture2D.hpp
include/glad/: gl.h  glad.h
src/: Application.cpp  Application_InitScene.cpp  Application_Platform.cpp  Main.cpp  Material.cpp  ResourceManager.cpp  Scene.cpp  ShaderProgram.cpp  SpatialObject.cpp  StaticMesh.cpp  StaticMeshInstance.cpp  Texture2D.cpp  glad.c
